# _luadist5.1.5

./: .gitignore  Android.mk  Application.mk  CMakeLists.txt  README.md  _copy2dirbnb.sh  _copyandroid2dirbnb.sh
_build/: build_linux64x86.sh  build_osx64arm.sh  build_osx64x86.sh  build_win32x86.bat  build_win64x86.bat  x64.bat  x86.bat
_build/linux32x86/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cf.lua  cmake_install.cmake  fib.lua  hello.lua  install_manifest.txt  life-quick.lua  printf.lua  trace-globals.lua
_build/linux64x86/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  bisect.lua  cmake_install.cmake  echo.lua  env.lua  factorial.lua  fibfor.lua  install_manifest.txt  life-quick.lua  sieve.lua  sort.lua  trace-calls.lua
_build/mingw32/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  a.sh  cf.lua  cmake_install.cmake  fib.lua  life-quick.lua  luaconf.h  printf.lua  sieve.lua
_build/osx64x86/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  bisect.lua  cf.lua  cmake_install.cmake  echo.lua  env.lua  factorial.lua  fib.lua  fibfor.lua  hello.lua  life-quick.lua  printf.lua  sieve.lua  sort.lua  trace-calls.lua  trace-globals.lua
_build/win32x86/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  bisect.lua  cmake_install.cmake  echo.lua  env.lua  factorial.lua  fibfor.lua  hello.lua  install_manifest.txt  life-quick.lua  sort.lua  trace-calls.lua  trace-globals.lua
_build/win32x86/Testing/Temporary/: CTestCostData.txt
_build/win64x86/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  bisect.lua  cf.lua  cmake_install.cmake  echo.lua  env.lua  factorial.lua  fib.lua  fibfor.lua  hello.lua  life-quick.lua  printf.lua  sieve.lua  sort.lua  trace-calls.lua  trace-globals.lua
_build/win64x86/test/: life-quick.lua
_release/arm/: Android.mk
lib/win32x86/: liblua.lib  liblua_static.lib  lua.lib
lib/win64x86/: liblua.exp  liblua.lib  liblua_static.lib  lua.lib
src/: loadlib_rel.c  lua_dyn.c  luaconf.h
src/stub1_version/: lauxlib.h  lua.h  lualib.h
